# problemform

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/arguments/: aquinas.yaml
benchmarks/beliefs/: jesus_is_son_of_god.yaml  universe_is_toroidal_finite.yaml
benchmarks/decisions/: make_dinner_or_takeout.yaml  what_should_i_do_tomorrow.yaml
benchmarks/dilemmas/: grandmother_alzheimers_identity.yaml  manager_friend_fudging_numbers.yaml
benchmarks/explanations/: airplanes_stay_up.yaml  curved_space_no_bending.yaml
benchmarks/goals/: be_a_better_person.yaml  lose_30_pounds.yaml
benchmarks/instructions/: clean_my_bedroom.yaml  web_app_money.yaml
benchmarks/plans/: ml_career_transition.yaml  web_app_money_roadmap.yaml
benchmarks/prompts/: clint_eastwood_memoir_rewrite.yaml  dragon_story.yaml
benchmarks/properties/: README.md  artifact_baseline_v1.yaml
benchmarks/rubrics/: README.md  answer_quality_v1.yaml  formulation_quality_v1.yaml
benchmarks/specifications/: online_bookstore_database.yaml  payment_api.yaml
docs/: DOCUMENTS_METADATA.md  PLANNING_NOTES.md  architecture.md  backlog.md  cli_commands.md  dependencies.md  environment.md  glossary.md  implementation.md  index.md  problem_state.md  problemform_constitution.md  roadmap.md  security.md
problemform/: README.md  cli.py  cli_render.py  config.py  models.py
tests/: conftest.py  test_cli.py  test_eval_cli.py  test_eval_corpus.py  test_eval_defaults.py  test_eval_engine.py  test_eval_judges.py  test_eval_models.py  test_eval_policy.py  test_eval_property_runner.py  test_eval_report.py  test_eval_rubric_runner.py  test_eval_scoring.py  test_language_models.py  test_state.py  test_workflow.py
(+77 files in other folders)
