[project]
name = "problemform"
version = "0.1.0"
description = "A human-AI collaborative problem formulation and reasoning system."
requires-python = ">=3.11"

dependencies = [
    "pydantic",
    "typer",
    "rich",
    "python-dotenv",
]

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
all = ["openai", "anthropic"]
dev = ["pytest", "openai", "anthropic"]

[project.scripts]
problemform = "problemform.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"