[project]
name = "problemform"
version = "0.1.1"
description = "A human-AI collaborative problem formulation and reasoning system."
authors = [
  {name = "Kevin Urban"}
]
keywords = [
  "llm",
  "prompt-engineering",
  "agent",
  "reasoning",
  "evaluation"
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"


dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv>=1",
]

[project.optional-dependencies]
openai = ["openai"]
anthropic = ["anthropic"]
all = ["openai", "anthropic"]
dev = ["pytest", "openai", "anthropic"]

[project.scripts]
problemform = "problemform.cli:app"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"